# resume

./: .env  README.md  TODO.md  agents.py  analyze_resume.py  app.py  memory.py  pyproject.toml  requirements.txt  tools.py  vercel.json
api/: health.py
resume_env/: pyvenv.cfg
resume_env/Scripts/: activate  activate.bat
